// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should render sort icons 1`] = `
<div>
  <div
    class="dx-cardview-header-item  "
    tabindex="0"
  >
    Column 1
    <div
      class="dx-cardview-header-item-sorting"
    >
      <div
        class="dx-icon dx-icon-sortup"
      />
    </div>
  </div>
</div>
`;

exports[`Item should use column caption as text 1`] = `
<div>
  <div
    class="dx-cardview-header-item  "
    tabindex="0"
  >
    my column caption
  </div>
</div>
`;
